# Ignus-Cor

./: .gitignore  .gitmodules  CMakeLists.txt
Documentation/: Master.xlsx  Scripting.xlsx
Documentation/File Formats/: animation.txt  conversation.txt  itemdb.txt  map.txt  owneditem.txt  playlist.txt
Projects/Editor/: Editor.cbp
Projects/Ignis Cor/: Ignis Cor.cbp
Resources/Data/: tileset.tlst
Resources/Data/Conversations/: new conversation.conv  test.conv
Resources/Data/DB/: items.db
Resources/Data/Maps/: poop.map  test.map
Resources/Data/Objects/: items.db
Resources/Data/Scripts/: poop.scp  test.scp  test2.scp  tileset.scr
Source/include/Editor/: AnimationEditor.hpp  ItemDbEditor.hpp  MapEditor.hpp  NpcEditor.hpp  version.h
Source/include/Shared/: DebugOverlays.hpp  Properties.hpp
Source/src/Editor/: AnimationEditor.cpp  ConversationEditor.cpp  ItemDbEditor.cpp  MapEditor.cpp  MapEditorDialogs.cpp  ScriptEditor.cpp  main.cpp
Source/src/Game/: main.cpp
src/: CMakeLists.txt
src/Editor/: AnimationEditor.hpp  CMakeLists.txt  ConversationEditor.hpp  MapEditor.cpp  MapEditorDialogs.cpp  ScriptEditor.hpp  main.cpp
src/Editor/GUI/: CMakeLists.txt  EditableCellTable.cpp  EditableCellTable.hpp  Form.cpp  Form.hpp  MultiLineEntry.cpp  WrappingBox.hpp
src/Editor/Helpers/: CMakeLists.txt  ConversationEditorWindow.hpp  Dialogs.cpp  FilePicker.cpp  FilePicker.hpp  LayerButtons.cpp  LayerButtons.hpp  MenuGenerators.hpp  ScriptEditorWindow.cpp
src/Game/: CMakeLists.txt  main.cpp
src/Game/Core/: BaseState.hpp  CMakeLists.txt  EventDispatcher.hpp  EventObserver.hpp  Game.hpp  PlayerInput.cpp
src/Game/Core/States/: CMakeLists.txt  MainState.cpp  MainState.hpp  PauseState.cpp
src/Game/Menu/: CMakeLists.txt  GameMenu.hpp  MenuBox.hpp
src/Shared/: CMakeLists.txt  DebugOverlays.hpp  Properties.cpp  Properties.hpp
src/Shared/Entities/: CMakeLists.txt  Entity.cpp  Entity.hpp  EntityBehavior.hpp  EntityBubble.cpp  EntityBubble.hpp  EntityConversation.cpp  EntityConversationNodeFactory.hpp  EntityInventory.cpp  EntityInventory.hpp  EntityManager.cpp  EntityManager.hpp  EntityVisual.cpp
src/Shared/Entities/Behaviors/: CMakeLists.txt  EntityBehavior.cpp  NpcWanderingBehavior.cpp  NpcWanderingBehavior.hpp
src/Shared/Entities/Instances/: CMakeLists.txt  DirectAttackEntity.cpp  DirectAttackEntity.hpp  MapEventEntity.hpp  NpcEntity.hpp  ParticleGeneratorEntity.cpp  Player.cpp  Player.hpp
src/Shared/Entities/Virtual/: AiEntity.cpp  CMakeLists.txt  CombatEntity.cpp  GraphicalEffectEntity.cpp  GraphicalEffectEntity.hpp
(+249 files in other folders)
